--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,6 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter, extra scripting
-;   Upload options: custom port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/en/stable/projectconf.html
-
-
 [env:arduino]
-platform = atmelavr
+platform = atmelsam
 framework = arduino
-board = pro8MHzatmega328
-build_flags = -Werror
+board = adafruit_feather_m0
+#build_flags = -Werror
+;upload_speed=921600
